# Recruitment-Intership-NM

./: .gitignore  README.md
Task1/: CMakeLists.txt  main.cpp
Task1/include/: app.h  triangle.h  vec2.h
Task1/source/: app.cpp  triangle.cpp  vec2.cpp
Task2/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  main.cpp
Task3/include/: predicate.h  trimString.h
Task3/tests/: CMakeLists.txt  test.cpp
